Bug 14620 - KD#61 Contact information validations
I'm thinking we should centralize all patron's contact information validators into one module. Currently we only have validati~

If a library does not wish to use validations, we should give them an option to turn them off. If more local validators are im~

With this method we could implement phone number validators from around the world and add them into our module. Then we would ~

Validations should be both client and server side.

-----------------------
Edit 19.8.2015

Validations.t:
 - Added address for user (because Vaara-kirjastot requires so)

-----------------------
Edit 31.8.2015

Koha/Validation.pm
 - Switched order of some conditions that didn't make sense before

Bug 14620 - KD#61 Whitespace fix for validations

    This fix trims emails and phone numbers just before form is sent.

    Fixes the invalid syntax used in JQuery's .on() functions' argument.

    Removes the trimming for click events as change event should be enough.

    Test plan:
    1. Apply the patches (and run updatedatabase.pl).
    2. Set system preferences ValidateEmailAddress to "Enable" and ValidatePhoneNumber to "International Phone Numbers".
    3. Make sure JavaScript is enabled.
    4. Navigate to edit user contact informations in Staff client and OPAC.
    5. Clear email and phone fields.
    6. Insert whitespaces to email and phone fields and submit the form.
    7. Edit patron.
    8. Observe that there are no longer whitespaces in email and phone fields.
    9. Insert invalid email (e.g. "invalid") and invalid phone number ("+123invalid") and send the form.
    10. Confirm that form will not be submitted and errors will be given.
    11. Disable JavaScript.
    12. Insert invalid email and invalid phone number
    13. Try sending the form again.
    14. Confirm that form will be submitted but errors will be given on top of the form.
    15. Observe that none of the changes are accepted.
    16. Set system preferences Valid

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/members/memberentrygen.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/members/memberentrygen.tt
@@ -11,13 +11,14 @@
     $(document).ready(function() {
         $("fieldset.rows input, fieldset.rows select").addClass("noEnterSubmit");
 
+        var MSG_INCORRECT_PHONE = _("Please enter a valid phone number.");
         $.validator.addMethod('phone', function(value) {
+            value = value.trim();
             if (!value.trim()) {
                 return 1;
             }
             else {
-                // http://regexlib.com/REDetails.aspx?regexp_id=3009
-                return (value.match(/^((\+)?[1-9]{1,2})?([-\s\.])?((\(\d{1,4}\))|\d{1,4})(([-\s\.])?[0-9]{1,12}){1,2}$/));
+                return (value.match(/[% phone_regex %]/));
             }
         },
         MSG_INCORRECT_PHONE);
@@ -82,6 +83,7 @@
         $("#othernames").change(checkUniqueOthernames);
         $("#entryform").validate({
             rules: {
+                [% IF (ValidatePhoneNumber ) %]
                 phone: {
                     phone: true,
                     required: false,
@@ -100,6 +102,20 @@
                     minlength: 5,
                     maxlength: 20
                 },
+                B_phone: {
+                    required: false,
+                    phone: true,
+                    minlength: 5,
+                    maxlength: 20
+                },
+                SMSnumber: {
+                    required: false,
+                    phone: true,
+                    minlength: 5,
+                    maxlength: 20
+                }[% IF ( ValidateEmailAddress ) %],[% END %]
+                [% END %]
+                [% IF ( ValidateEmailAddress ) %]
                 email: {
                     required: false,
                     email: true
@@ -111,19 +127,8 @@
                 B_email: {
                     required: false,
                     email: true
-                },
-                SMSnumber: {
-                    required: false,
-                    phone: true,
-                    minlength: 5,
-                    maxlength: 20
-                },
-                B_phone: {
-                    required: false,
-                    phone: true,
-                    minlength: 5,
-                    maxlength: 20
                 }
+                [% END %]
             },
             submitHandler: function(form) {
                 $("body, form input[type='submit'], form button[type='submit'], form a").addClass('waiting');
@@ -132,10 +137,34 @@
                 }
                 else {
                     form.beenSubmitted = true;
+                    [% IF ValidateEmailAddress %]
+                        $("#email, #emailpro, #B_email").each(function(){
+                            $(this).val($.trim($(this).val()));
+                        });
+                    [% END %]
+                    [% IF ValidatePhoneNumber %]
+                        $("#phone, #phonepro, #B_phone, #SMSnumber").each(function(){
+                            $(this).val($.trim($(this).val()));
+                        });
+                    [% END %]
                     form.submit();
                 }
             }
         });
+        
+        [% IF ValidateEmailAddress %]
+        $("#email, #emailpro, #B_email").on("change", function(){
+            $(this).val($.trim($(this).val()));
+        });
+        [% END %]
+        [% IF ValidatePhoneNumber %]
+        $("#SMSnumber").on("change", function(){
+            $(this).val($.trim($(this).val()));
+        });
+        $("#phone, #phonepro, #B_phone").on("change", function(){
+            $(this).val($.trim($(this).val()));
+        });
+        [% END %]
 
         var mrform = $("#manual_restriction_form");
         var mrlink = $("#add_manual_restriction");
@@ -327,6 +356,12 @@
             [% END %]
             [% IF ERROR_bad_email_alternative %]
                 <li id="ERROR_bad_email_alternative">The alternative email is invalid.</li>
+            [% END %]
+            [% IF ERROR_bad_phone_alternative %]
+                <li id="ERROR_bad_phone_alternative">The alternative phone is invalid.</li>
+            [% END %]
+            [% IF ERROR_bad_smsnumber %]
+                <li id="ERROR_bad_smsnumber">The SMS number is invalid.</li>
             [% END %]
 			</ul>
 		</div>
