--- a/koha-tmpl/opac-tmpl/bootstrap/en/modules/opac-messaging.tt
+++ b/koha-tmpl/opac-tmpl/bootstrap/en/modules/opac-messaging.tt
@@ -26,6 +26,9 @@
                     [% IF ( settings_updated ) %]
                         <div class="alert alert-success"><h4>Settings updated</h4></div>
                     [% END %]
+                    [% IF ( invalid_smsnumber ) %]
+                        <div class="alert alert-error"><h4>Invalid SMS number</h4></div>
+                    [% END %]
                     <form action="/cgi-bin/koha/opac-messaging.pl" method="get" name="opacmessaging">
                         <input type="hidden" name="modify" value="yes" />
 
@@ -141,7 +144,61 @@
           $("#rss"+newid).removeAttr("checked");
       }
     });
+    var MSG_INCORRECT_PHONE = _("Please enter a valid phone number.");
+
+    $("fieldset.rows input, fieldset.rows select").addClass("noEnterSubmit");
+
+    var MSG_INCORRECT_PHONE = _("Please enter a valid phone number.");
+    $.validator.addMethod('phone', function(value) {
+        if (!value.trim()) {
+            return 1;
+        }
+        else {
+            return (value.match(/[% phone_regex %]/));
+        }
+    },
+    MSG_INCORRECT_PHONE);
+
+    $("form[name='opacmessaging']").validate({
+        rules: {
+            [% IF ( ValidatePhoneNumber ) %]
+            SMSnumber: {
+                phone: true
+            }
+            [% END %]
+        },
+        submitHandler: function(form) {
+            $("body, form input[type='submit'], form button[type='submit'], form a").addClass('waiting');
+            if (form.beenSubmitted) {
+                return false;
+            }
+            else {
+                form.beenSubmitted = true;
+                [% IF ValidatePhoneNumber %]
+                    $("#SMSnumber").each(function(){
+                        $(this).val($.trim($(this).val()));
+                    });
+                [% END %]
+                form.submit();
+            }
+        },
+        errorPlacement: function(error, element) {
+            offset = element.offset();
+            error.insertAfter(element)
+            error.addClass('error');  // add a class to the wrapper
+            error.css('position', 'absolute');
+            error.css('left', offset.left + element.outerWidth() + 10);
+            error.css('top', offset.top);
+            error.css('width', 'auto');
+        }
+    });
+    [% IF ( ValidatePhoneNumber ) %]
+    $("#SMSnumber").on("change", function(){
+            $(this).val($.trim($(this).val()));
+    });
+    [% END %]
   });
 //]]>
 </script>
+<script type="text/javascript" src="/opac-tmpl/bootstrap/lib/jquery/plugins/jquery.validate.min.js"></script>
 [% END %]
