--- a/koha-tmpl/opac-tmpl/bootstrap/lib/bootstrap/css/bootstrap.css
+++ b/koha-tmpl/opac-tmpl/bootstrap/lib/bootstrap/css/bootstrap.css
@@ -6311,3 +6311,22 @@ button.close {
   vertical-align: baseline;
   height: 11px;
 }
+#memberentry-form input.error,
+form[name=opacmessaging] input.error {
+  border-color: #c00;
+  box-shadow: 0 1px 1px #c00 inset, 0 0 8px #c00;
+  color: red; outline: 0 none;
+}
+#memberentry-form input.error:focus,
+form[name=opacmessaging] input.error:focus {
+  border-color: #c00;
+  box-shadow: 0 1px 1px #c00 inset, 0 0 8px #c00;
+  color: red;
+  outline: 0 none;
+}
+#memberentry-form label.error,
+form[name=opacmessaging] label.error {
+  color: #c00;
+  float: none;
+  font-size: 90%;
+}
