LUMME #211 - Adding genre and newcontent to items

--- a/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
+++ b/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
@@ -1241,7 +1241,7 @@ a .term {
 }
 
 /* style for shelving location in catalogsearch */
-.shelvingloc {
+.shelvingloc, .genre, .newcontent {
     display : block;
     font-style : italic;
 }
