LUMME#211 - Adding genre and sub_location to items

--- a/koha-tmpl/opac-tmpl/bootstrap/en/modules/opac-detail.tt
+++ b/koha-tmpl/opac-tmpl/bootstrap/en/modules/opac-detail.tt
@@ -1176,9 +1176,10 @@
                             </div>
                         [% END %]
                         <span class="shelvingloc">[% ITEM_RESULT.location_description %]</span>
+                        <span class="genre">[% ITEM_RESULT.genre %]</span>
                     </td>
                     [% IF ( itemdata_ccode ) %]
-                        <td class="collection">[% ITEM_RESULT.ccode %]</td>
+                        <td class="collection">[% ITEM_RESULT.ccode %]<br/><span class="newcontent">[% ITEM_RESULT.newcontent %]</span></td>
                     [% END %]
                     <td class="call_no" property="sku">
                         [% IF ( ITEM_RESULT.itemcallnumber ) %]
