--- a/koha-tmpl/opac-tmpl/prog/en/modules/opac-detail.tt
+++ b/koha-tmpl/opac-tmpl/prog/en/modules/opac-detail.tt
@@ -1554,6 +1554,7 @@ YAHOO.util.Event.onContentReady("furtherm", function () {
         </div>
     [% END %]
     <span class="shelvingloc">[% ITEM_RESULT.location_description %]</span>
+    <span class="genre">[% ITEM_RESULT.genre %]</span>
     </td>
             [% IF ( itemdata_ccode ) %]<td class="collection">[% ITEM_RESULT.ccode %]</td>[% END %]
         <td class="call_no" property="sku">
