LUMME#244, Separated holdsqueues

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/catalogue/results.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/catalogue/results.tt
@@ -536,12 +536,12 @@ var holdForPatron = function () {
                                 <td><div class="availability">
                                     [% IF ( SEARCH_RESULT.items_count ) %]<strong>[% SEARCH_RESULT.items_count %]
                                     [% IF ( SEARCH_RESULT.itemsplural ) %]items[% ELSE %]item[% END %][% IF ( SEARCH_RESULT.availablecount ) %], [% SEARCH_RESULT.availablecount %] available[% ELSE %], None available[% END %]</strong>
-<!--
 
                                     [% IF ( SEARCH_RESULT.availablecount ) %]
                                     <ul>
                                     [% FOREACH available_items_loo IN SEARCH_RESULT.available_items_loop %]
-
+                                    <li>[% IF ( available_items_loo.branchname ) %][% available_items_loo.branchname %][% END %]</li>
+                                    <!--
                                         [% IF item_level_itypes && !noItemTypeImages && available_items_loo.imageurl %]
                                         <li style="list-style: none; list-style-type: none;">
                                           <img src="[% available_items_loo.imageurl %]" title="[% available_items_loo.description %]" alt="[% available_items_loo.description %]" />
@@ -556,15 +556,16 @@ var holdForPatron = function () {
                                         <br/>[% available_items_loo.description %]
                                         [% END %]
                                         </li>
+                                    -->
                                     [% END %]
                                     </ul>
                                     [% END %]
--->
                                    [% IF ( SEARCH_RESULT.onloancount ) %]
                                    <span class="status">[% SEARCH_RESULT.onloancount %] on loan</span>
-<!--
                                     <ul>
                                     [% FOREACH onloan_items_loo IN SEARCH_RESULT.onloan_items_loop %]
+                                    <li>[% IF ( onloan_items_loo.branchname ) %][% onloan_items_loo.branchname %][% END %]</li>
+                                    <!--
                                         [% IF item_level_itypes && !noItemTypeImages && onloan_items_loo.imageurl %]
                                         <li style="list-style: none; list-style-type: none;">
                                           <img src="[% onloan_items_loo.imageurl %]" title="[% onloan_items_loo.description %]" alt="[% onloan_items_loo.description %]" />
@@ -579,16 +580,17 @@ var holdForPatron = function () {
                                         <br/>[% onloan_items_loo.description %]
                                         [% END %]
                                         </li>
+                                    -->
                                     [% END %]
                                     </ul>
--->
                                     [% END %]
 
                                     [% IF ( SEARCH_RESULT.othercount ) %]
                                     <span class="unavailable">[% SEARCH_RESULT.othercount %] unavailable</span>
-<!--
                                     <ul>
                                     [% FOREACH other_items_loo IN SEARCH_RESULT.other_items_loop %]
+                                    <li>[% IF ( other_items_loo.branchname ) %][% other_items_loo.branchname %][% END %]</li>
+                                    <!--
                                         [% IF item_level_itypes && !noItemTypeImages && other_items_loo.imageurl %]
                                         <li style="list-style: none; list-style-type: none;">
                                           <img src="[% other_items_loo.imageurl %]" title="[% other_items_loo.description %]" alt="[% other_items_loo.description %]" />
@@ -609,9 +611,9 @@ var holdForPatron = function () {
                                         <br/>[% other_items_loo.description %]
                                         [% END %]
                                         </li>
+                                    -->
                                     [% END %]
                                     </ul>
--->
                                     [% END %]
                                     [% ELSE %]
                                     [% IF ( SEARCH_RESULT.ALTERNATEHOLDINGS.count ) %]
